# zmk_ps2_mouse_trackpoint_driver

./: CMakeLists.txt  Kconfig
dts/behaviors/: mouse_mode.dtsi
dts/bindings/behaviors/: zmk,behavior-mouse-mode.yaml
include/zmk/: mouse_mode.h
src/behaviors/: behavior_mouse_mode.c
src/mouse/: input_listener_ps2.c
